--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>fatballs.world</title>
 
 
-        <link rel="stylesheet" href="style1.css"> 
+        <link rel="stylesheet" href="stylesheets/style1.css"> 
 
         <meta charset="UTF-8">
         <meta name="description" content="The hub of all things fatballs">
@@ -27,7 +27,14 @@
             Please tell me why! Tell me what I did wrong! Anything! Just tell me!
             Oh the dog died. The dog died because of you! You killed him! You killed him, you killed him, 
             you killed him, he died because of you! He was fine until you came home! You killed the poor little thing! 
-            He loved you! Why did you take him for granted like that? You always took him for granted! You were so selfish! 
-            You didn't even care about him! So selfish! So cruel! I wish you'd never come back! You ruined everything!</div>
+            He loved you! Why did you take him for granted like that?
+             You always took him for granted! You were so selfish! 
+            You didn't even care about him! So selfish! So cruel!
+             I wish you'd never come back! You ruined everything!</div>
+
+        <div id="imagetest">
+            <img src="images\emoji-que.gif" alt="crazytown" height="200px">
+
+        </div>
     </body>
 </html>
