--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         welcome to fatballs.world <br>
         please enjoy your stay
         </div>
-        <div id="welcome2">The dog in the locked cronked pot roast with no water, the dog is dying without water! 
+        <div id="pot_roast">
+            The dog in the locked cronked pot roast with no water, the dog is dying without water! 
             Oh fuck that's good! That's fucking amazing! Eat shit and die, I'm leaving! You think you're so smart? 
             You think you know everything? Fuck off! Get out of this house right now! a Go to hell! Stop eating me! 
             And stop drinking my blood,
@@ -30,11 +31,12 @@
             He loved you! Why did you take him for granted like that?
              You always took him for granted! You were so selfish! 
             You didn't even care about him! So selfish! So cruel!
-             I wish you'd never come back! You ruined everything!</div>
+             I wish you'd never come back! You ruined everything!
 
-        <div id="imagetest">
-            <img src="images\emoji-que.gif" alt="crazytown" height="200px">
+             <div id="que">
+                <img src="images\emoji-que.gif" alt="bruh" height="200px">
+             </div>
+            </div>
 
-        </div>
     </body>
 </html>
