fatballs gif added

--- a/index.html
+++ b/index.html
@@ -17,25 +17,7 @@
         please enjoy your stay
         </div>
         <div id="pot_roast">
-            The dog in the locked cronked pot roast with no water, the dog is dying without water! 
-            Oh fuck that's good! That's fucking amazing! Eat shit and die, I'm leaving! You think you're so smart? 
-            You think you know everything? Fuck off! Get out of this house right now! a Go to hell! Stop eating me! 
-            And stop drinking my blood,
-            I'll kill you if you drink any more! Why did I ever trust you?
-            What was wrong with me? You had your chance and you fucked it up again!
-            Get away from me! I hate you! I fucking hate you! You make me sick!
-            You made me do things I never would have done otherwise! Why can't you just leave me alone?!
-            Please tell me why! Tell me what I did wrong! Anything! Just tell me!
-            Oh the dog died. The dog died because of you! You killed him! You killed him, you killed him, 
-            you killed him, he died because of you! He was fine until you came home! You killed the poor little thing! 
-            He loved you! Why did you take him for granted like that?
-             You always took him for granted! You were so selfish! 
-            You didn't even care about him! So selfish! So cruel!
-             I wish you'd never come back! You ruined everything!
-
-             <div id="que">
-                <img src="images\emoji-que.gif" alt="bruh" height="200px">
-             </div>
+            <img src="images\fatballs_earth.gif" alt="fatballs.world" height="300px">
             </div>
 
     </body>
