reduced gif size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         please enjoy your stay
         </div>
         <div id="pot_roast">
-            <img src="images\fatballs_earth.gif" alt="fatballs.world" height="300px">
+            <img src="images\fatballs_earth_ultralight.gif" alt="fatballs.world" height="300px">
             </div>
 
     </body>
