--- a/pages/crazytown.html
+++ b/pages/crazytown.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>welcome to crazy town</h1>
-    <a href="index.html" target=_self>
+    <a href="../index.html" target=_self>
         go back home <br>
         <hr>
     </a>
