--- a/pages/music.html
+++ b/pages/music.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>games</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>games</h1>
+    <h1>music</h1>
 </body>
 </html>
