--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>fatballs.world</title>
 
-
+        <link rel="icon" type="image/gif" href="images/fatballs_favicon.gif">
         <link rel="stylesheet" href="stylesheets/style1.css"> 
         
         <meta charset="UTF-8">
