switched to multi-satellite img

--- a/index.html
+++ b/index.html
@@ -22,121 +22,134 @@
             <img src="images\fatballs_earth_ultralight.gif" alt="fatballs.world" height="300px">
         </div>
 
-        <div id="wrap">
-
-            <div id="satellite">
-                    <img src="images\satellite_sexy_hollow.png" alt="satellite" height="2000px">
 
 
-                    <div id="backing"></div>
+        <div id="satellites">
 
-                    <div id="tvs">
-                        <!--NOW ENTERING HTML HELL BECAUSE I AM STUPID AND DON'T KNOW HOW TO CODE BETTER-->
-                        <a href="pages\about.html">
-                        <div id="tv1" class="tv">
-                            <video
-                            src="video/about_default.mp4"
-                            onmouseover="this.src='video/about_hover.mp4'"
-                            onmouseleave="this.src='video/about_default.mp4'"
-                            alt="about"
-                            width="70px" height="70px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
+            <img src="images\satellite_multi.png" alt="satellites" height="900px">
 
-                        <a href="pages\video.html">
-                        <div id="tv2" class="tv">
-                            <video
-                            src="video/video_default.mp4"
-                            onmouseover="this.src='video/video_hover.mp4'"
-                            onmouseleave="this.src='video/video_default.mp4'"
-                            alt="about"
-                            width="65px" height="65px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
+            <!--NOW ENTERING HTML HELL BECAUSE I AM STUPID AND DON'T KNOW HOW TO CODE BETTER-->
 
-                        <a href="pages\music.html">
-                        <div id="tv3" class="tv">
-                            <video
-                            src="video/music_default.mp4"
-                            onmouseover="this.src='video/music_hover.mp4'"
-                            onmouseleave="this.src='video/music_default.mp4'"
-                            alt="about"
-                            width="55px" height="55px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
+            <div id="tvs">
 
-                        <a href="pages\games.html">
-                        <div id="tv4" class="tv">
-                            <video
-                            src="video/games_default.mp4"
-                            onmouseover="this.src='video/games_hover.mp4'"
-                            onmouseleave="this.src='video/games_default.mp4'"
-                            alt="about"
-                            width="70px" height="70px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>    
-
-                        <a href="pages\art.html">
-                        <div id="tv5" class="tv">
-                            <video
-                            src="video/art_default.mp4"
-                            onmouseover="this.src='video/art_hover.mp4'"
-                            onmouseleave="this.src='video/art_default.mp4'"
-                            alt="about"
-                            width="70px" height="70px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
-
-                        <a href="pages\crazytown.html">
-                        <div id="tv6" class="tv">
-                            <video
-                            src="video/crazy_default.mp4"
-                            onmouseover="this.src='video/crazy_hover.mp4'"
-                            onmouseleave="this.src='video/crazy_default.mp4'"
-                            alt="about"
-                            width="50px" height="50px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
-
-                        <a href="pages\gif_collection.html">
-                        <div id="tv7" class="tv">
-                            <video
-                            src="video/gif_default.mp4"
-                            onmouseover="this.src='video/gif_hover.mp4'"
-                            onmouseleave="this.src='video/gif_default.mp4'"
-                            alt="about"
-                            width="60px" height="60px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
-
-                        <a href="pages\guestbook.html">
-                        <div id="tv8" class="tv">
-                            <video
-                            src="video/guestbook_default.mp4"
-                            onmouseover="this.src='video/guestbook_hover.mp4'"
-                            onmouseleave="this.src='video/guestbook_default.mp4'"
-                            alt="about"
-                            width="60px" height="60px"
-                            autoplay loop>
-                            </video>
-                        </div>
-                        </a>
-
+                <a href="pages\about.html">
+                    <div id="tv1" class="tv">
+                        <video
+                        src="video/about_default.mp4"
+                        onmouseover="this.src='video/about_hover.mp4'"
+                        onmouseleave="this.src='video/about_default.mp4'"
+                        alt="about"
+                        width="70px" height="70px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
                     </div>
+                    </a>
+
+                    <a href="pages\video.html">
+                    <div id="tv2" class="tv">
+                        <video
+                        src="video/video_default.mp4"
+                        onmouseover="this.src='video/video_hover.mp4'"
+                        onmouseleave="this.src='video/video_default.mp4'"
+                        alt="about"
+                        width="65px" height="65px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing2" class="backing"></div>
+                    </div>
+                    </a>
+
+                    <a href="pages\music.html">
+                    <div id="tv3" class="tv">
+                        <video
+                        src="video/music_default.mp4"
+                        onmouseover="this.src='video/music_hover.mp4'"
+                        onmouseleave="this.src='video/music_default.mp4'"
+                        alt="about"
+                        width="60px" height="60px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
+                    </div>
+                    </a>
+
+                    <a href="pages\games.html">
+                    <div id="tv4" class="tv">
+                        <video
+                        src="video/games_default.mp4"
+                        onmouseover="this.src='video/games_hover.mp4'"
+                        onmouseleave="this.src='video/games_default.mp4'"
+                        alt="about"
+                        width="70px" height="70px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
+                    </div>
+                    </a>    
+
+                    <a href="pages\art.html">
+                    <div id="tv5" class="tv">
+                        <video
+                        src="video/art_default.mp4"
+                        onmouseover="this.src='video/art_hover.mp4'"
+                        onmouseleave="this.src='video/art_default.mp4'"
+                        alt="about"
+                        width="70px" height="70px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
+                    </div>
+                    </a>
+
+                    <a href="pages\crazytown.html">
+                    <div id="tv6" class="tv">
+                        <video
+                        src="video/crazy_default.mp4"
+                        onmouseover="this.src='video/crazy_hover.mp4'"
+                        onmouseleave="this.src='video/crazy_default.mp4'"
+                        alt="about"
+                        width="50px" height="50px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
+                    </div>
+                    </a>
+
+                    <a href="pages\gif_collection.html">
+                    <div id="tv7" class="tv">
+                        <video
+                        src="video/gif_default.mp4"
+                        onmouseover="this.src='video/gif_hover.mp4'"
+                        onmouseleave="this.src='video/gif_default.mp4'"
+                        alt="about"
+                        width="55px" height="55px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
+                    </div>
+                    </a>
+
+                    <a href="pages\guestbook.html">
+                    <div id="tv8" class="tv">
+                        <video
+                        src="video/guestbook_default.mp4"
+                        onmouseover="this.src='video/guestbook_hover.mp4'"
+                        onmouseleave="this.src='video/guestbook_default.mp4'"
+                        alt="about"
+                        width="60px" height="60px"
+                        autoplay loop>
+                        </video>
+                        <div id="backing1" class="backing"></div>
+                    </div>
+                    </a>
+
+            </div>
+
+
+        </div>
+
+
 
                     <div type="button" id="click_me" onclick="moveSatellite()"></div>
                    <!-- <button type="button" id="click_me" onclick="moveSatellite()">hi</button>-->
