--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
         <meta name="description" content="The hub of all things fatballs">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="juxive">
+
+        <link rel="preload" href="video/about_hover.mp4" as="video"/>
+        <link rel="preload" href="video/video_hover.mp4" as="video"/>
+        <link rel="preload" href="video/art_hover.mp4" as="video"/>
+        <link rel="preload" href="video/music_hover.mp4" as="video"/>
+        <link rel="preload" href="video/games_hover.mp4" as="video"/>
+        <link rel="preload" href="video/crazy_hover.mp4" as="video"/>
+        <link rel="preload" href="video/guestbook_hover.mp4" as="video"/>
+        <link rel="preload" href="video/gif_hover.mp4" as="video"/>
+
+
+
     </head>
     <body>
        
@@ -19,7 +31,7 @@
         please enjoy your stay
         </div>
         <div id="earth">
-            <img src="images\fatballs_earth_ultralight.gif" alt="fatballs.world" height="300px">
+            <img src="images\fatballs_earth_ultralight.gif" alt="fatballs.world" height="300px" fetchpriority="high">
         </div>
 
 
@@ -35,9 +47,9 @@
                 <a href="pages\about.html">
                     <div id="tv1" class="tv">
                         <video
-                        src="video/about_default.mp4"
+                        src="video/about_default.webm"
                         onmouseover="this.src='video/about_hover.mp4'"
-                        onmouseleave="this.src='video/about_default.mp4'"
+                        onmouseleave="this.src='video/about_default.webm'"
                         alt="about"
                         width="70px" height="70px"
                         autoplay loop>
@@ -49,9 +61,9 @@
                     <a href="pages\video.html">
                     <div id="tv2" class="tv">
                         <video
-                        src="video/video_default.mp4"
+                        src="video/video_default.webm"
                         onmouseover="this.src='video/video_hover.mp4'"
-                        onmouseleave="this.src='video/video_default.mp4'"
+                        onmouseleave="this.src='video/video_default.webm'"
                         alt="about"
                         width="65px" height="65px"
                         autoplay loop>
@@ -63,9 +75,9 @@
                     <a href="pages\music.html">
                     <div id="tv3" class="tv">
                         <video
-                        src="video/music_default.mp4"
+                        src="video/music_default.webm"
                         onmouseover="this.src='video/music_hover.mp4'"
-                        onmouseleave="this.src='video/music_default.mp4'"
+                        onmouseleave="this.src='video/music_default.webm'"
                         alt="about"
                         width="60px" height="60px"
                         autoplay loop>
@@ -77,9 +89,9 @@
                     <a href="pages\games.html">
                     <div id="tv4" class="tv">
                         <video
-                        src="video/games_default.mp4"
+                        src="video/games_default.webm"
                         onmouseover="this.src='video/games_hover.mp4'"
-                        onmouseleave="this.src='video/games_default.mp4'"
+                        onmouseleave="this.src='video/games_default.webm'"
                         alt="about"
                         width="70px" height="70px"
                         autoplay loop>
@@ -91,9 +103,9 @@
                     <a href="pages\art.html">
                     <div id="tv5" class="tv">
                         <video
-                        src="video/art_default.mp4"
+                        src="video/art_default.webm"
                         onmouseover="this.src='video/art_hover.mp4'"
-                        onmouseleave="this.src='video/art_default.mp4'"
+                        onmouseleave="this.src='video/art_default.webm'"
                         alt="about"
                         width="70px" height="70px"
                         autoplay loop>
@@ -105,9 +117,9 @@
                     <a href="pages\crazytown.html">
                     <div id="tv6" class="tv">
                         <video
-                        src="video/crazy_default.mp4"
+                        src="video/crazy_default.webm"
                         onmouseover="this.src='video/crazy_hover.mp4'"
-                        onmouseleave="this.src='video/crazy_default.mp4'"
+                        onmouseleave="this.src='video/crazy_default.webm'"
                         alt="about"
                         width="50px" height="50px"
                         autoplay loop>
@@ -119,9 +131,9 @@
                     <a href="pages\gif_collection.html">
                     <div id="tv7" class="tv">
                         <video
-                        src="video/gif_default.mp4"
+                        src="video/gif_default.webm"
                         onmouseover="this.src='video/gif_hover.mp4'"
-                        onmouseleave="this.src='video/gif_default.mp4'"
+                        onmouseleave="this.src='video/gif_default.webm'"
                         alt="about"
                         width="55px" height="55px"
                         autoplay loop>
@@ -133,9 +145,9 @@
                     <a href="pages\guestbook.html">
                     <div id="tv8" class="tv">
                         <video
-                        src="video/guestbook_default.mp4"
+                        src="video/guestbook_default.webm"
                         onmouseover="this.src='video/guestbook_hover.mp4'"
-                        onmouseleave="this.src='video/guestbook_default.mp4'"
+                        onmouseleave="this.src='video/guestbook_default.webm'"
                         alt="about"
                         width="60px" height="60px"
                         autoplay loop>
