--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="The hub of all things fatballs">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="juxive">
+        <meta name="author" content="xanthur">
 
         <link rel="preload" href="video/about_hover.mp4" as="video"/>
         <link rel="preload" href="video/video_hover.mp4" as="video"/>
@@ -24,7 +24,6 @@
 
     </head>
     <body>
-       <!--test-->
         <!--what the flip!!!-->
         <div id="welcome1">
         welcome to fatballs.world <br>
@@ -157,20 +156,7 @@
                     </a>
 
             </div>
-
-
-        </div>
-
-
-
-                    <div type="button" id="click_me" onclick="moveSatellite()"></div>
-                   <!-- <button type="button" id="click_me" onclick="moveSatellite()">hi</button>-->
-            </div>
-        </div>
-
         
-
-           
 
 
         <script src="js\app.js"></script>
