--- a/pages/crazytown.html
+++ b/pages/crazytown.html
@@ -4,12 +4,6 @@
     <title>crazy.town</title>
 </head>
 <body>
-    <h1>welcome to crazy town</h1>
-    <a href="../index.html" target=_self>
-        go back home <br>
-        <hr>
-    </a>
-
-    <img src="/images/crazytown.png" height="600" title="rare image of crazy town" alt="rare image of crazy town">
+    <h1>crazytown</h1>
 </body>
 </html>
