fatballs-earth optimizations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     </a>
                 </div>
-                <img id="earth" src="images\fatballs_earth_ultralight.gif" alt="fatballs.world" height="300px" fetchpriority="high">
+                <video loop autoplay id="earth" src="video\fatballs-world-60fps-rgba.webm" alt="fatballs.world" height="300px" width="300px" fetchpriority="high">
 
                 <div id="dummy"></div>
             </div>
