--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img id="tv" src="images\satellite_render_medium.png" width="512px">
                     <a href="pages\home.html">
                     <div id="display">
-                        <h1 id="enter_text">ENTER SITE</h1>
+                        <h1 id="enter_text">ENTER <br> SITE</h1>
                     </div>
                     </a>
                 </div>
