--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         please click the earth to enter
         </div>
             <div id="world">
-                <a href="pages/about.html">
+                <a href="pages/home.html">
                 <video playsinline autoplay muted loop id="earth" src="video\xanthur-dot-com-60fps-rgba.webm" alt="fatballs.world" height="450px" width="450px" fetchpriority="high">
                 </a>
             </div>
