--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,18 @@
+
+---
+permalink: home/
+---
+
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>games</title>
+    <title>home</title>
 </head>
 <body>
-    <h1>games</h1>
+    <h1>home</h1>
 </body>
 </html>
