--- a/pages/video.html
+++ b/pages/video.html
@@ -11,7 +11,7 @@ permalink: /video/
 
 
     <title>xanthur.com</title>
-    <link rel="icon" type="image/gif" href="images/favicon.png">
+    <link rel="icon" type="image/gif" href="/images/favicon.png">
     <link rel="stylesheet" href="/stylesheets/pages.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
