--- a/pages/home.html
+++ b/pages/home.html
@@ -80,7 +80,7 @@ permalink: /home/
             <p>
                 welcome to my website, i make digital stuff and sometimes i'll put my work on here.
                 this website happens to be one of those digital stuffs, and when webdev is not melting my brain
-                i like to work on this sited.
+                i like to work on this site.
                 <br>
                 <br>
                 usually my art (if you can call it that) comes in many different forms, but most times it's in the realm of games, video, music, or 3D models.
