removed self doubt

--- a/pages/home.html
+++ b/pages/home.html
@@ -51,6 +51,7 @@ permalink: /home/
                 <td>
                     <a href="/video/">video</a>
                 </td>
+
             </tr>
             </table>
             
@@ -83,7 +84,7 @@ permalink: /home/
                 i like to work on this site.
                 <br>
                 <br>
-                usually my art (if you can call it that) comes in many different forms, but most times it's in the realm of games, video, music, or 3D models.
+                whenever i feel creative, i tend to lean towards the digital end of things. I usually end up making games, videos, music, or 3D models.
                 <br>
                 <br>
                 currently this site is empty and unfinished, but in the coming weeks hopefully i'll have atleast a skeleton to build on.
