removed self doubt for real

--- a/pages/home.html
+++ b/pages/home.html
@@ -29,7 +29,7 @@ permalink: /home/
     
 <header id="header">
     <h1>XANTHUR.COM</h1>
-    <h6>A WEBSITE OF ALL TIME</h6>
+    <h6>WELCOME</h6>
     </header>
 
 
