--- a/pages/video.html
+++ b/pages/video.html
@@ -29,7 +29,7 @@ permalink: /video/
     
 <header id="header">
     <h1>XANTHUR.COM</h1>
-    <h6>A WEBSITE OF ALL TIME</h6>
+    <h6>YOUTUBE VIDEO</h6>
     </header>
 
 
