update my stupid about info

--- a/pages/home.html
+++ b/pages/home.html
@@ -79,15 +79,10 @@ permalink: /home/
             <h2>about</h2>
             <br>
             <p>
-                welcome to my website, i make digital stuff and sometimes i'll put my work on here.
-                this website happens to be one of those digital stuffs, and when webdev is not melting my brain
-                i like to work on this site.
+                welcome to my website, my name is xanthur and quite frequently i get a burning creative "itch" that i am inclined to scratch, and if i think an endeavour is remotely interesting i'll
+                put it here on this website. maybe someday i'll write a better about section but i'm bad at writing about myself (great at talking about myself though... awkward)
                 <br>
-                <br>
-                whenever i feel creative, i tend to lean towards the digital end of things. I usually end up making games, videos, music, or 3D models.
-                <br>
-                <br>
-                currently this site is empty and unfinished, but in the coming weeks hopefully i'll have atleast a skeleton to build on.
+                this website is still very bare bones; it's missing a lot of content and probably will need some reworks here and there but i'm working on it i pwomise..
 
 
                 
