--- a/pages/home.html
+++ b/pages/home.html
@@ -79,8 +79,12 @@ permalink: /home/
             <h2>about</h2>
             <br>
             <p>
-                welcome to my website, my name is xanthur and quite frequently i get a burning creative "itch" that i am inclined to scratch, and if i think an endeavour is remotely interesting i'll
-                put it here on this website. maybe someday i'll write a better about section but i'm bad at writing about myself (great at talking about myself though... awkward)
+                welcome to my website, my name is xanthur and quite frequently i get a burning creative "itch" that i am inclined to scratch.
+                <br>
+                if i ever think an endeavour is remotely interesting i'll put it here on this website. 
+                <br>
+                maybe someday i'll write a better about section but i'm bad at writing about myself (great at talking about myself though... awkward)
+                <br>
                 <br>
                 this website is still very bare bones; it's missing a lot of content and probably will need some reworks here and there but i'm working on it i pwomise..
 
