--- a/pages/3D.html
+++ b/pages/3D.html
@@ -86,8 +86,108 @@ permalink: /3D/
             <br>
             <br>
             <h1>CATALOG</h1> 
+            <br>
+            <br>
+           <table>
+            <tr>
+                <td>
+                    <img src="/images/3D/thumbnails/xanthurcom.png">
+                    <br>
+                    xanthur.com earth
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/fatballs satellite.png">
+                    <br>
+                    fatballs satellites
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/picture frame.png">
+                    <br>
+                    picture frame
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+            </tr>
 
-           
+            <tr>
+                <td>
+                    <img src="/images/3D/thumbnails/dylan fortnite.png">
+                    <br>
+                    dylan fornite
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/toyota.png">
+                    <br>
+                    1986 toyota tercel
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/cardboard glorp.png">
+                    <br>
+                    cardboard glorp cutout
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <img src="/images/3D/thumbnails/warehouse.png">
+                    <br>
+                    warehouse map
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/hatchet.png">
+                    <br>
+                    rusted hatchet
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/spaceship.png">
+                    <br>
+                    spaceship interior prototype
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <img src="/images/3D/thumbnails/revolver.png">
+                    <br>
+                    revolver
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/laundry.png">
+                    <br>
+                    laundry pile
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                <td>
+                    <img src="/images/3D/thumbnails/industry-snow.png">
+                    <br>
+                    snowy industrial map
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+            </tr>
+
+
+
+           </table>
         </div>
 
 
