--- a/pages/3D.html
+++ b/pages/3D.html
@@ -184,7 +184,17 @@ permalink: /3D/
                     <a href="/3D/xanthur_com_earth">{info}</a>
                 </td>
             </tr>
-
+            
+            <tr>
+                <td>
+                    <img src="/images/3D/thumbnails/thumbtack.png">
+                    <br>
+                    thumbtacks
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
+                
+            </tr>
 
 
            </table>
