--- a/pages/3D.html
+++ b/pages/3D.html
@@ -193,6 +193,13 @@ permalink: /3D/
                     <br>
                     <a href="/3D/xanthur_com_earth">{info}</a>
                 </td>
+                <td>
+                    <img src="/images/3D/thumbnails/thumbnailForWeb.png">
+                    <br>
+                    dax thebus
+                    <br>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
+                </td>
                 
             </tr>
 
