added work in progress page

--- a/pages/3D.html
+++ b/pages/3D.html
@@ -95,21 +95,21 @@ permalink: /3D/
                     <br>
                     xanthur.com earth
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/fatballs satellite.png">
                     <br>
                     fatballs satellites
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/picture frame.png">
                     <br>
                     picture frame
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
             </tr>
 
@@ -119,21 +119,21 @@ permalink: /3D/
                     <br>
                     dylan fornite
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/toyota.png">
                     <br>
                     1986 toyota tercel
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/cardboard glorp.png">
                     <br>
                     cardboard glorp cutout
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
             </tr>
 
@@ -143,21 +143,21 @@ permalink: /3D/
                     <br>
                     warehouse map
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/hatchet.png">
                     <br>
                     rusted hatchet
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/spaceship.png">
                     <br>
                     spaceship interior prototype
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
             </tr>
 
@@ -167,21 +167,21 @@ permalink: /3D/
                     <br>
                     revolver
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/laundry.png">
                     <br>
                     laundry pile
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/industry-snow.png">
                     <br>
                     snowy industrial map
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
             </tr>
             
@@ -191,14 +191,14 @@ permalink: /3D/
                     <br>
                     thumbtacks
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/daxthebus.png">
                     <br>
                     dax thebus
                     <br>
-                    <a href="/3D/xanthur_com_earth">{info}</a>
+                    <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 
             </tr>
